PDS-59 navbar/ fix z-index

--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -64,7 +64,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    z-index: 10;
+    z-index: 3;
 }
 
 .menu {
